--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "chalk": "^5.0.1",
     "cookie-parser": "^1.4.6",
