--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "fanstime_backend",
   "version": "1.0.0",
@@ -34,6 +33,7 @@
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.1",
     "socket.io": "^4.2.0",
     "uuid": "^8.3.2"
   },
