--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-url-shortener": "^2.0.3",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
